--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <link href="./resources/css/style.css" type= "text/css" rel="stylesheet"/>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming soon!)</a>
+    <p>
+      <video autoplay muted loop src="./resources/videos/excursion.mp4">...</video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p class= ex>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+      <img src="./resources/images/camp.jpg" alt="image of camping">
+    </p>
+    <img src="./resources/images/phone.png" alt="white phone">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="#">Download Excursion (Coming soon!)</a>
+    <p class= copyright>© Excur</p>
   </body>
 </html>
